fix z-index at previous and next button in readform.html

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -612,6 +612,7 @@ textarea {
     position: absolute;
     bottom: 30%;
     width: 80%;
+    z-index: -1;
     /*justify-content: center;*/
 }
 
